Fix header on small screens

--- a/src/app/sections/Connected.module.scss
+++ b/src/app/sections/Connected.module.scss
@@ -8,3 +8,11 @@
   font-weight: var(--bold);
   margin-bottom: 4px;
 }
+
+.button {
+  min-width: 0;
+}
+
+.button__text {
+  display: none;
+}
